eclipse collections conversion; cleanup; timings for init() and individual bases included. general use of prefix tree.